# Discord-Unban-Platform

./: Cargo.toml  LICENSE  README.md  config.json  rustfmt.toml
.cargo/: config.toml
docs/: architecture.md  data-contracts.md
infra/kubernetes/: configmap.yaml  deployments.yaml  hpa.yaml  keda-worker-scaledobject.yaml  kustomization.yaml  namespace.yaml  services.yaml
infra/postgres/migrations/: 001_platform_init.sql  002_ratelimit_analytics_and_task_context.sql
libs/auth/: Cargo.toml
libs/auth/src/: lib.rs
libs/discord-client/: Cargo.toml
libs/discord-client/src/: lib.rs
libs/kafka-runtime/: Cargo.toml
libs/kafka-runtime/src/: lib.rs
libs/platform-store/: Cargo.toml
libs/platform-store/src/: lib.rs
libs/rate-limit/: Cargo.toml
libs/rate-limit/src/: lib.rs
libs/task-model/: Cargo.toml
libs/task-model/src/: lib.rs
libs/telemetry/: Cargo.toml
libs/telemetry/src/: lib.rs
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/audit-service/: Cargo.toml
services/audit-service/src/: main.rs
services/cache-service/: Cargo.toml
services/cache-service/src/: main.rs
services/metrics-service/: Cargo.toml
services/metrics-service/src/: main.rs
services/queue-service/: Cargo.toml
services/queue-service/src/: main.rs
services/rate-limit-service/: Cargo.toml
services/rate-limit-service/src/: main.rs
services/shard-manager/: Cargo.toml
services/shard-manager/src/: main.rs
services/task-controller/: Cargo.toml
services/task-controller/src/: main.rs
services/task-planner/: Cargo.toml
services/task-planner/src/: main.rs
services/worker/: Cargo.toml
services/worker/src/: main.rs
