[workspace]
members = [
    "libs/auth",
    "libs/discord-client",
    "libs/kafka-runtime",
    "libs/platform-store",
    "libs/rate-limit",
    "libs/task-model",
    "libs/telemetry",
    "services/api-gateway",
    "services/audit-service",
    "services/cache-service",
    "services/metrics-service",
    "services/queue-service",
    "services/rate-limit-service",
    "services/shard-manager",
    "services/task-controller",
    "services/worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
http = "1"
jsonwebtoken = "9"
prometheus = "0.13"
 rdkafka = { version = "0.37", features = ["tokio", "cmake-build"] }
redis = { version = "0.29", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
twilight-gateway = { version = "0.16", features = ["twilight-http"] }
twilight-http = "0.16"
twilight-model = "0.16"
uuid = { version = "1", features = ["serde", "v4"] }
