[package]
name = "auth"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
task-model = { path = "../task-model" }
