[package]
name = "api-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
auth = { path = "../../libs/auth" }
axum.workspace = true
chrono.workspace = true
kafka-runtime = { path = "../../libs/kafka-runtime" }
platform-store = { path = "../../libs/platform-store" }
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
task-model = { path = "../../libs/task-model" }
telemetry = { path = "../../libs/telemetry" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
