[package]
name = "metrics-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
prometheus.workspace = true
telemetry = { path = "../../libs/telemetry" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
