[package]
name = "rate-limit-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
rate-limit = { path = "../../libs/rate-limit" }
serde_json.workspace = true
telemetry = { path = "../../libs/telemetry" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
