[package]
name = "shard-manager"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
discord-client = { path = "../../libs/discord-client" }
serde_json.workspace = true
telemetry = { path = "../../libs/telemetry" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
twilight-gateway.workspace = true
twilight-http.workspace = true
