[package]
name = "task-planner"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde_json.workspace = true
task-model = { path = "../../libs/task-model" }
telemetry = { path = "../../libs/telemetry" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
