[package]
name = "worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
discord-client = { path = "../../libs/discord-client" }
kafka-runtime = { path = "../../libs/kafka-runtime" }
platform-store = { path = "../../libs/platform-store" }
rate-limit = { path = "../../libs/rate-limit" }
rdkafka.workspace = true
serde_json.workspace = true
task-model = { path = "../../libs/task-model" }
telemetry = { path = "../../libs/telemetry" }
tokio.workspace = true
tracing.workspace = true
twilight-http.workspace = true
uuid.workspace = true
